--- a/index.html
+++ b/index.html
@@ -1,42 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Syed Mohammad Afraim - Data Scientist</title>
-  <style>
-    body {
-      background-color: #f3e5f5;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      text-align: center;
-      margin-top: 150px;
-    }
-    h1 {
-      font-size: 40px;
-      color: #673ab7;
-      margin-bottom: 20px;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    }
-    p {
-      font-size: 24px;
-      color: #9c27b0;
-      margin-bottom: 40px;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-    }
-    .dreamy {
-      font-size: 60px;
-      color: #e91e63;
-      text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.7);
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Syed Md. Afraim</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Hello, I'm</h1>
-    <h1>Syed Mohammad Afraim</h1>
-    <p class="dreamy">Data Scientist</p>
-  </div>
+    <header>
+        <h1>Afraim</h1>
+        <img src="your_picture.jpg" alt="Your Picture">
+    </header>
+
+    <section class="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>
+                <h3>Case Study: Bellabeat data analysis</h3>
+                <img src="project1_picture.jpg" alt="Project 1">
+                <p>Description of Project 1.</p>
+            </li>
+            <li>
+                <h3>Case Study-2: Flight Fare Prediction</h3>
+                <img src="project2_picture.jpg" alt="Project 2">
+                <p>End-to-end ML project</p>
+            </li>
+            <!-- Add more projects as needed -->
+        </ul>
+    </section>
 </body>
 </html>
