--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <!-- navbar header -->
   <div class="nav-header">
     <div class="nav-brand">
-      <img src="C:\Users\User\Downloads\personal-webpage\personal-webpage\dist\pic\personal.jpg">
+      <img src="\pic\personal.jpg">
+      ">
     </div>
     <i class="fa fa-bars fa-3x"></i>
     <div class="header-links">
