--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Afraim - Portfolio</title>
   <title>Syed Md. Afraim</title>
-  <meta name="description" content="Web designer and front-end developer">
+  <meta name="description" content="Data Analyst/Machine Learning engineer">
   <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,400,600' rel='stylesheet' type='text/css'>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -55,7 +55,7 @@
 
     <div class="section aboutme" data-anchor="aboutme">
       <div class="opaque-bg animated fadeInDown">
-        <h1 style="color:white">BRAD<span style="color:#FF6363">/</span>ENGELHARDT</h1>
+        <h1 style="color:white">Syed Mohammad<span style="color:#FF6363">/</span>Afraim</h1>
         <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
       </div>
       <i id="moveDown" class="fa fa-chevron-down fa-3x bounce"></i>
