--- a/index.html
+++ b/index.html
@@ -54,12 +54,18 @@
     <!-- begin section -->
 
     <div class="section aboutme" data-anchor="aboutme">
-      <div class="opaque-bg animated fadeInDown">
-        <h1 style="color:white">Syed Mohammad<span style="color:#FF6363">/</span>Afraim</h1>
-        <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
+      <div class="content-wrapper">
+        <div class="opaque-bg animated fadeInDown">
+          <h1 style="color:white">Syed Mohammad<span style="color:#FF6363">/</span>Afraim</h1>
+          <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
+        </div>
+        <i id="moveDown" class="fa fa-chevron-down fa-3x bounce"></i>
       </div>
-      <i id="moveDown" class="fa fa-chevron-down fa-3x bounce"></i>
+      <div class="picture">
+        <img src="\pic\personal.jpg" alt="Your Picture">
+      </div>
     </div>
+    
     <!-- end section -->
 
     <!-- begin section -->
@@ -67,7 +73,7 @@
     <div class="section" data-anchor="skills">
       <div class="content">
         <h1 class="wow fadeInDown" data-wow-delay="0.2s">ABOUT ME</h1>
-        <p class="wow fadeInDown" data-wow-delay="0.2s">Hi, I'm Brad Engelhardt! I'm a Silicon Valley based Web Designer & Front-end Developer focused on creating clean, responsive web designs!</p>
+        <p class="wow fadeInDown" data-wow-delay="0.2s">Hi, I'm Afraim, a final year student in Computer Science and working on Data Analysis and Machine learning. I'm looking to collaborate on projects/challenges with outsiders on the same interest as me in Omdena or any other ways. Moreover, I'm learning about Computer vision and Neural networks as well. Fun fact is I never knew that I'd be this much of a geek.</p>
 
         <div class=" wow fadeInUp container-skillbar" data-wow-delay="0.2s">
           <div class="skillbar clearfix " data-percent="90%">
