--- a/index.html
+++ b/index.html
@@ -56,8 +56,13 @@
     <div class="section aboutme" data-anchor="aboutme">
       <div class="content-wrapper">
         <div class="opaque-bg animated fadeInDown">
-          <h1 style="color:white">Syed Mohammad<span style="color:#FF6363">/</span>Afraim</h1>
-          <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
+          <div class="container">
+            <div class="description">
+                <h1>Your Name</h1>
+                <p>
+                    Your description goes here. Add any details about yourself, your skills, and your projects.
+                </p>
+            </div>          <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
         </div>
         <i id="moveDown" class="fa fa-chevron-down fa-3x bounce"></i>
       </div>
