--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               Hey there! I'm a Data Science enthusiast. I possess a comprehensive skill set in data analysis and machine learning, with expertise in NumPy, Pandas, scikit-learn, Matplotlib, and SQL. Proficient in API data extraction with Beautiful Soup4, and experienced in end-to-end ML projects with cloud integration through CI/CD pipeline. Cloud expert in Heroku and AWS EC2, delivering valuable insights with engaging visualizations. Also, adept at creating beautiful and interactive dashboards with Power BI and Tableau.
             </p>
             <div class="button">
-              <a href="SM_Afraim_CV.pdf" download class="download-button">Download CV</a>
+              <a href="Images/SM_Afraim_CV.pdf" download class="download-button">Download CV</a>
             </div>
           </div>
         </div>
