--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ Heroku | Amazon EC2
             <p>An end to end flight fare prediction</p>
             <p><div class="media-icons">
               <a href = ""><i class="fa-brands fa-kaggle fa-flip"></i></a>    |
-              <a href= ""><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
+              <a href= "https://github.com/Shikamaru77/Indian-Flight-Fare-Prediction/"><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
             </div> </p>
           </div>
           <div class="box">
