--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="scroll-button">
       <a href="#home"><i class="fas fa-arrow-up"></i></a>
     </div>
-    <!-- navgaition menu -->
+    <!-- navgation menu -->
     <nav>
       <div class="navbar">
         <div class="logo"><a href="#home">SMA.</a></div>
@@ -188,10 +188,10 @@ Heroku | Amazon EC2
               <i class="fas fa-chart-line fa-fade"></i>
             </div>
             <div class="topic">ML Proj-1</div>
-            <p>An end to end time series analysis</p>
+            <p><a href = "https://bd-aqi.onrender.com/">Bangladesh AQI prediction</p></a>
             <p><div class="media-icons">
               <a href = ""><i class="fa-brands fa-kaggle fa-flip"></i></a>    |
-              <a href= ""><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
+              <a href= "https://github.com/Shikamaru77/BD_AQI"><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
             </div> </p>
           </div>
           <div class="box">
