--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@ Python | HTML | CSS | C++
                Excel
               </br>
               ➤ Big Data & Database:</br>
-              Pyspark |
+              
               SQL
              </br>
               ➤ Web Development Frameworks: </br>
               Django | Flask
              </br>
               ➤ Cloud Platforms:</br>
-Heroku | Amazon EC2
+Render
 </br>
 ➤ UI/UX Design:</br>
                Figma</br>
