--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <p>
                 Aspiring for a rewarding role in Data Analysis, Data Science, or Machine Learning. Combining 1.5+ years of hands-on expertise in data science and machine learning with
                 over a year of proven excellence in competitive programming. Proficient in Python, Scikit-learn,
-                Seaborn, API requests, Beautiful Soup, SQL, Excel, Tableau, and Power BI. Adept at collaborating
+                Seaborn, API requests, SQL, Excel, Flask, Tableau, and Power BI. Adept at collaborating
                 within diverse teams, possessing strong management skills. Passionate about leveraging data-driven
                 insights to drive innovation and deliver impactful solutions. Eager to contribute and thrive in
                 a dynamic and challenging environment.
@@ -79,7 +79,9 @@
           <div class="right">
             <div class="topic">Crafting Captivating Narratives with Data Science</div>
             <p>
-              Hey there! I'm a Data Science enthusiast. I possess a comprehensive skill set in data analysis and machine learning, with expertise in NumPy, Pandas, scikit-learn, Matplotlib, and SQL. Proficient in API data extraction with Beautiful Soup4, and experienced in end-to-end ML projects with cloud integration through CI/CD pipeline. Cloud expert in Heroku and AWS EC2, delivering valuable insights with engaging visualizations. Also, adept at creating beautiful and interactive dashboards with Power BI and Tableau.
+              Hey there! I'm a Data Science enthusiast. I possess a comprehensive skill set in data analysis
+               and machine learning, with expertise in NumPy, Pandas, scikit-learn, Matplotlib, Tensorflow, Keras 
+               and SQL. Proficient in API data extraction with python requests, and experienced in end-to-end ML projects with cloud integration through Render, delivering valuable insights with engaging visualizations. Also, adept at creating beautiful and interactive dashboards with Power BI and Tableau.
             </p>
             <div class="button">
               <a href="Images/SM_Afraim_CV.pdf" download class="download-button">Download CV</a>
@@ -200,9 +202,9 @@ Render
             </div>
             
             <div class="topic">ML Proj-2</div>
-            <p>An end to end flight fare prediction</p>
+            <a href = ""><p>An end to end flight fare prediction</p></a>
             <p><div class="media-icons">
-              <a href = ""><i class="fa-brands fa-kaggle fa-flip"></i></a>    |
+              <a href = "https://www.kaggle.com/code/syedmohammadafraim2/flight-fare-prediction"><i class="fa-brands fa-kaggle fa-flip"></i></a>    |
               <a href= "https://github.com/Shikamaru77/Indian-Flight-Fare-Prediction/"><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
             </div> </p>
           </div>
