--- a/index.html
+++ b/index.html
@@ -169,6 +169,19 @@ Render
             <div class="topic" style="background-image: url('Images\proj1.png');">
             <a href="https://www.kaggle.com/code/syedmohammadafraim2/case-study-bellabeat-using-pythons-3d-plots">Case Study-1</div></a>
             <p>Data Analysis on Bellabeat</p>
+            <p>👉Tools used:</br>
+            Python | Matplotlib | Seaborn | Plotly ex | Tableau </br>
+            </p>
+            <p>👉Goal:The goal of the data analysis on Bellabeat was to explore and 
+              analyze the relationship between calories, total steps walked, heart rates and its influence on the buying behavior 
+              and growth of Bellabeat products. By leveraging data-driven insights and statistical analysis, 
+              the objective by me was to identify especially the patterns and correlations between heart rate data and
+               customer engagement with Bellabeat products. The ultimate aim was to provide evidence-based recommendations 
+               and strategies to support the company's business growth. Through this data analysis, 
+               Bellabeat could aim to make informed decisions, optimize product offerings, and enhance customer experiences, 
+              thereby fostering sustainable growth in the fitness technology market.</br>
+               </br>
+              </p>
             <p><div class="media-icons">
               <a href = "https://www.kaggle.com/code/syedmohammadafraim2/case-study-bellabeat-using-pythons-3d-plots"><i class="fa-brands fa-kaggle fa-flip"></i></a>    |
               <a href= "https://github.com/Shikamaru77/Data-Analytics-Bellabeat-Case-Study"><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
@@ -192,7 +205,7 @@ Render
             <div class="topic">ML Proj-1</div>
             <p><a href = "https://bd-aqi.onrender.com/">Bangladesh AQI prediction</p></a>
             <p><div class="media-icons">
-              <a href = ""><i class="fa-brands fa-kaggle fa-flip"></i></a>    |
+              <a href = "https://www.kaggle.com/code/syedmohammadafraim2/bangladesh-aqi-prediction"><i class="fa-brands fa-kaggle fa-flip"></i></a>    |
               <a href= "https://github.com/Shikamaru77/BD_AQI"><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
             </div> </p>
           </div>
@@ -205,7 +218,7 @@ Render
             <a href = ""><p>An end to end flight fare prediction</p></a>
             <p><div class="media-icons">
               <a href = "https://www.kaggle.com/code/syedmohammadafraim2/flight-fare-prediction"><i class="fa-brands fa-kaggle fa-flip"></i></a>    |
-              <a href= "https://github.com/Shikamaru77/Indian-Flight-Fare-Prediction/"><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
+              <a href= "https://github.com/Shikamaru77/Flights-fare-prediction"><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
             </div> </p>
           </div>
           <div class="box">
